<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/general_header">

        <EditTextPreference
            app:key="users_name"
            app:title="@string/users_name"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/appearance_header">

        <ListPreference
            app:key="@string/pref_theme"
            app:title="@string/theme_mode"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="MODE_NIGHT_FOLLOW_SYSTEM"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

<!--    <PreferenceCategory-->
<!--        app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title"/>-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="attachment"-->
<!--            app:title="@string/attachment_title"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:dependency="sync"/>-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>